tests/rosetta/out/Zig/boyer-moore-string-search.error
zig build: exit status 1
/tmp/boyer-moore-string-search.zig:101:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/boyer-moore-string-search.zig:101:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
